--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
