--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-awesome-loading": "^1.0.15",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-pager-view": "^5.0.12",
+    "react-native-paper": "^4.10.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
