--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "~0.63.4",
     "react-native-awesome-loading": "^1.0.15",
     "react-native-elements": "^3.4.2",
+    "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-pager-view": "^5.0.12",
