--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "connect":"adb reverse tcp:8081 tcp:8081"
+    "connect": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
     "@expo-google-fonts/dev": "^0.2.0",
@@ -35,6 +35,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
