--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@expo-google-fonts/montserrat": "^0.2.0",
     "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
-    "@reduxjs/toolkit": "^1.6.2",
+    "@reduxjs/toolkit": "^1.7.0",
     "axios": "^0.24.0",
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
@@ -41,7 +42,7 @@
     "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.6",
-    "reactotron-react-native": "^5.0.0",
+    "reactotron-react-native": "^5.0.1",
     "reactotron-redux": "^3.1.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
