--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "connect": "adb reverse tcp:8081 tcp:8081"
+    "connect": "adb reverse tcp:9090 tcp:9090"
   },
   "dependencies": {
     "@expo-google-fonts/dev": "^0.2.0",
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-picker": "^4.6.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^13.0.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.10.1",
     "react-native-reanimated": "~2.2.0",
