--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-picker": "^4.6.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^13.0.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.10.1",
     "react-native-reanimated": "~2.2.0",
@@ -41,6 +42,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.15.0",
     "react-redux": "^7.2.6",
     "reactotron-react-native": "^5.0.1",
     "reactotron-redux": "^3.1.3",
