--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-awesome-loading": "^1.0.15",
+    "react-native-document-picker": "^7.1.3",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "~1.10.2",
