--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/dev": "^0.2.0",
     "@expo-google-fonts/montserrat": "^0.2.0",
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/cli-platform-ios": "^7.0.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -27,6 +28,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-awesome-loading": "^1.0.15",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "~1.10.2",
@@ -35,6 +37,7 @@
     "react-native-modal": "^13.0.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.10.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
